Fullscreen and other minor changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="content">
         <center>
         <div id="chantilly_robotics">
-            <div id="match"><center><font>Next Match: <span class="red">42</span></font></center></div>
+            <div id="match"><center><font>Next Match: <span class="blue">42</span></font></center></div>
             <div id="time"></div>
             <div id="display-delay">Delay: <span class="green">on time</span></div>
         </div>
